<resources>
    <string name="app_name">Test News</string>
    <string name="sectionName">World News</string>
    <string name="pillarName">News</string>
    <string name="webTitle">Coronavirus live news: lockdowns reduced infection rate by 81%, research shows</string>
    <string name="type">Live blog</string>
    <string name="webPublicationDate">24/08/2001</string>




        <string name="near_the">Near the</string>

        <string name="no_earthquakes">No news found.</string>

        <string name="no_internet_connection">No internet connection.</string>

</resources>
